# guess-me-with-neural-networks

./: README.md  app.py  game.py  main.py  neural.py  pyproject.toml  zoo.py
data/: zoo.csv
saved/: hyperparameter_info.json  zoo-tmp.json  zoo.json  zoo_10.json  zoo_15.json  zoo_20.json  zoo_7.json  zoo_8.json
