[tool.poetry]
name = "20-question-using-neural-networks"
version = "0.1.0"
description = "20 Quesstions game that is build on top of neural network with Zoo Dataset"
authors = ["Hatim Patrawala <hatimpatrawala786@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.1"
streamlit = "^1.37.0"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false